# Tasker

./: package-lock.json
src/: index.html  main.js  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/css/: app.css  main.css  titlebar.css
src/js/: notify.js  titlebar.js
